# SisterRay

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  travis-build.sh
protos/: CMakeLists.txt  mod_manifest.pb.cc  mod_manifest.pb.h
src/: CMakeLists.txt  EncodedString.cpp  EncodedString.h  accessory.cpp  accessory.h  api.h  armor.cpp  armor.h  battle_menu.cpp  battle_menu.h  command_mechanics.cpp  command_mechanics.h  damage_formulas.cpp  damage_formulas.h  elemental_modifiers.cpp  elemental_modifiers.h  elemental_status_infliction.cpp  equip_menu.cpp  func_registry.cpp  function_registry_template.h  gzip.cpp  gzip.h  impl.h  init.c  init.cpp  inventory.cpp  inventory.h  inventory_functions.cpp  inventory_functions.h  inventory_menu.cpp  inventory_menu.h  items.cpp  items.h  kernel.c  kernel.cpp  kernel.h  kernel_utils.h  log.cpp  lua.cpp  lua_console.cpp  (+23 more)
src/battle/: ai_script_engine.cpp  ai_script_engine.h  ai_script_opcodes.cpp  ai_script_opcodes.h  ai_scripts.cpp  ai_scripts.h  animation_scripts.cpp  animation_scripts.h  battle.cpp  battle.h  battle_actor_interface.h  battle_actors.cpp  battle_actors.h  battle_context.cpp  battle_context.h  battle_engine_api.h  battle_engine_interface.h  battle_utils.cpp  battle_utils.h  enemies.cpp  enemies.h  engine_utils.cpp  formations.h  scene_globals.cpp  scene_globals.h  scene_loader.cpp  scene_loader.h  sr_battle_engine.cpp  sr_battle_engine.h  string_display_event.cpp  string_display_event.h
src/battle/actions/: action_dispatch.cpp  action_interface.cpp  action_interface.h  action_queue.h  action_queue_pop.cpp  action_queue_pop.h  actions_api.h  damage_events.cpp  damage_events.h  post_action_callbacks.h  pre_action_callbacks.cpp  pre_action_callbacks.h
src/battle/ai_script/: ai_script_api.h  ai_script_engine.cpp  ai_script_engine.h  ai_script_opcodes.cpp  ai_script_opcodes.h  ai_scripts.cpp  ai_scripts.h
src/battle/animation/: animation_api.h  animation_player.cpp  animation_player.h
src/battle/animation_script/: animation_script_api.h  animation_script_opc_handlers.cpp  animation_script_opcode.cpp  animation_script_opcode.h  animation_script_parser.cpp  animation_script_parser.h
src/battle/battle_models/: animation_registry.cpp  animation_registry.h  animation_scripts.cpp  animation_scripts.h  battle_modeL_utils.cpp  battle_model_names.h  battle_model_state.cpp  battle_model_state_interface.h  battle_model_utils.h  battle_models.cpp  battle_models.h  battle_models_api.h  battle_models_interface.h  model_animations.cpp  model_animations.h  model_file_utils.cpp  model_file_utils.h  model_names.h  model_setup_routines.cpp  model_setup_routines.h  model_skeleton.cpp  model_skeleton.h
src/battle/camera/: camera.cpp  camera.h  camera_script_opcode.cpp  camera_script_opcode.h  camera_script_opcode_handlers.cpp  camera_script_opcode_handlers.h  camera_scripts.cpp  camera_scripts.h
src/battle/effects/: action_effect_callbacks.cpp  action_effect_callbacks.h  action_effect_textures.cpp  action_effect_textures.h  action_effect_types.h  action_effects.cpp  action_effects.h  action_spell_effects.cpp  action_spell_effects.h  effects_api.h  sound_effects.cpp  sound_effects.h  summon_effects.cpp  summon_effects.h
src/battle/engine/: action_dispatch.h  action_effect_callbacks.cpp  action_queue.h  (+30 more)
src/events/: battle_events.h  event.h  event_bus.cpp  event_bus.h  event_bus_interface.h  events.cpp  menu_events.h  non_copyable.h  party_events.h  sr_event_base.h  sr_event_callback.h  sr_event_dispatcher.h
src/files/: lgp_loader.cpp  lgp_loader.h
src/gamedata/: accessory.cpp  accessory.h  armor.cpp  armor.h  attacks.cpp  attacks.h  base_item.cpp  base_item.h  base_type_names.h  battle_stat_formulas.cpp  battle_stat_formulas.h  battle_stats.cpp  battle_stats.h  cmd_select_callbacks.cpp  cmd_select_callbacks.h  command_callbacks.cpp  command_callbacks.h  command_sr_callbacks.cpp  command_sr_callbacks.h  commands.cpp  commands.h  damage_callback_utils.cpp  damage_callback_utils.h  damage_callbacks.cpp  damage_callbacks.h  damage_formulas.cpp  damage_formulas.h  element_names.h  elements.cpp  elements.h  enemies.cpp  enemies.h  formations.cpp  formations.h  formula_callbacks.cpp  formula_callbacks.h  formula_names.h  formulas.cpp  formulas.h  game_data_interface.h  (+20 more)
src/inventories/: battle_inventory.cpp  battle_inventory.h  inventory.cpp  inventory.h  inventory_functions.cpp  inventory_utils.cpp  inventory_utils.h  materia_inventory.cpp  materia_inventory.h  sr_inventory_template.h
src/lua/: item.cpp  items.cpp  lua.cpp  lua_api.h  lua_console.cpp
src/menus/: battle_menu.cpp  battle_menu.h  common_widgets.cpp  common_widgets.h  cursor.cpp  cursor.h  equip_menu.cpp  equip_menu.h  equip_menu_callbacks.cpp  equip_menu_callbacks.h  equip_menu_listeners.cpp  equip_menu_listeners.h  equip_menu_widget.cpp  equip_menu_widget.h  inventory_menu.cpp  inventory_menu.h  menu.cpp  menu.h  menu_api.h  menu_engine.cpp  menu_engine.h  menu_interface.h  menu_utils.cpp  menu_utils.h  transition.cpp  transition.h
src/mods/: char_commands.cpp  char_commands.h  controllable_summon.cpp  controllable_summon.h  new_spells.cpp  new_spells.h  stagger.cpp  stagger.h
src/module/: module.cpp  module.h  module_api.h
src/party/: action_enabled_callbacks.cpp  action_enabled_callbacks.h  action_support_handlers.cpp  action_support_handlers.h  battle_stats.cpp  battle_stats.h  characters.cpp  characters.h  equipment.cpp  equipment.h  party.cpp  party.h  party_actions.cpp  party_actions.h  party_callbacks.cpp  party_callbacks.h  party_interface.h  party_member.h  party_utils.cpp  party_utils.h  stat_boosts.cpp  stat_boosts.h  stat_calculation.cpp  stat_calculation.h  stat_names.h
src/system/: ff7memory.h  graphics.cpp  graphics.h
src/widgets/: allocator.cpp  allocator.h  assets.cpp  assets.h  base_widget.cpp  base_widget.h  container_table.cpp  container_table.h  containers.cpp  containers.h  primitives.cpp  primitives.h  updater.cpp  updaters.h  widget.cpp  widget.h  widget_api.cpp  widgets_api.h
(+239 files in other folders)
